split apart the flox control instructions

--- a/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_3_variables.ipynb
+++ b/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_3_variables.ipynb
@@ -16,6 +16,45 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Assignation simple et multiple\n",
+    "\n",
+    "L'assignation se fait avec le signe \"**=**\"\n",
+    "\n",
+    "~~~python\n",
+    "# Que valent a et b ?\n",
+    "a=2;b=3\n",
+    "a,b=2,3\n",
+    "a = b = 4\n",
+    "a,b=b,a\n",
+    "~~~\n",
+    "\n",
+    "On reviendra sur les tuples mais voici un exemple :\n",
+    "~~~python\n",
+    "tuple1=(1,'python')\n",
+    "x,y=tuple1\n",
+    "# Que valent x et y ?\n",
+    "~~~\n",
+    "\n",
+    "- Référencement\n",
+    "~~~python\n",
+    "x='python'   # création de la donnée \"python\" référencé par \"x\"\n",
+    "type(x)      # l'OBJET référencé est de type \"str\"\n",
+    "id(x)        # 4297861808 (adresse mémoire)\n",
+    "y=x          # nouvelle variable pointant sur la même donnée\n",
+    "id(y)        # 4297861808 (même adresse mémoire)\n",
+    "x=123        # création de la donnée \"123\" et changement de référencement pour \"x\"\n",
+    "type(x)      # l'OBJET référencé est de type \"int\"\n",
+    "id(x)        # 4299222384 (x pointe vers une autre adresse mémoire)\n",
+    "del(y)       # on supprime le référencement de y sur la donnée \"python\"\n",
+    "             # le garbage collector supprimera la donnée automatiquement\n",
+    "             # libérant ainsi de la mémoire...\n",
+    "~~~\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "internals": {
      "slide_helper": "subslide_end",
@@ -27,9 +66,7 @@
     }
    },
    "source": [
-    "## Les types simples\n",
-    "\n",
-    "4 types simples : **booléen, entier**, réel et complexe flottant\n",
+    "## Les 4 types simples : booléens et entiers\n",
     "\n",
     "- **Booléen**\n",
     "    ~~~python\n",
@@ -72,9 +109,7 @@
     }
    },
    "source": [
-    "## Les types simples\n",
-    "\n",
-    "4 types simples : booléen, entier, **réel et complexe flottant**\n",
+    "## Les 4 types simples : réels et complexes flottants\n",
     "\n",
     "- **Réel**\n",
     "    ~~~python\n",
@@ -275,19 +310,19 @@
     "## Opérateurs de base\n",
     "\n",
     "~~~python\n",
-    "x=10                # renvoie 10\n",
-    "x+=1                # renvoie 11\n",
-    "x-=1                # renvoie 10\n",
-    "x*=5                # renvoie 50\n",
-    "x/=10               # renvoie 5\n",
-    "x%=2                # renvoie 1\n",
+    "x = 10                # renvoie 10\n",
+    "x += 1                # renvoie 11\n",
+    "x -= 1                # renvoie 10\n",
+    "x *= 5                # renvoie 50\n",
+    "x /= 10               # renvoie 5\n",
+    "x %= 2                # renvoie 1\n",
     "\n",
-    "fruit = 'pomme'     # renvoie \"pomme\"\n",
-    "fruit+='s'          # renvoie \"pommes\"\n",
+    "fruit = 'pomme'       # renvoie \"pomme\"\n",
+    "fruit += 's'          # renvoie \"pommes\"\n",
     "\n",
-    "monTuple=(1,2,3)    # renvoie (1,2,3)\n",
-    "monTuple+=(4,)      # renvoie (1,2,3,4)\n",
-    "monTuple*=2         # renvoie (1,2,3,4,1,2,3,4)\n",
+    "monTuple = (1,2,3)    # renvoie (1,2,3)\n",
+    "monTuple += (4,)      # renvoie (1,2,3,4)\n",
+    "monTuple *= 2         # renvoie (1,2,3,4,1,2,3,4)\n",
     "~~~"
    ]
   },
@@ -1359,6 +1394,27 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A suivre..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Entrées/sorties](synope_fonctions_4_entrees_sorties.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A propos des auteurs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "internals": {
      "slide_helper": "subslide_end"
@@ -1374,8 +1430,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mise en forme"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -1477,7 +1540,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1508,7 +1571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.3.5"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
