--- a/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_4_entrees_sorties.ipynb
+++ b/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_4_entrees_sorties.ipynb
@@ -18,6 +18,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Affichage dans le terminal : fonction print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "help(\"print\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comme vous le voyez dans l'aide ci-dessus, on peut donner à la fonction autant d'arguments non nommés que l'on veut, et ils seront envoyés par defaut sur la sortie standard, séparés par des espaces \" \", terminés par un changement de ligne, et le tout en attente dans un tampon. Toutes choses modifiables en utilisant les arguments nommés adéquats."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La somme de 3 et 2 est 5\n",
+      "Le produit de 3 et 2 est 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=3; b=2;\n",
+    "print('La somme de', a, 'et', b, 'est', a+b)\n",
+    "print('Le produit de', a, 'et', b, 'est', a*b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La somme de 3 et 2 est 5, et le produit de 3 et 2 est 6.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('La somme de', a, 'et', b, 'est', a+b, end=', ')\n",
+    "print('et le produit de', a, 'et', b, 'est', a*b, end='.\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Formattage des affichages"
    ]
   },
@@ -30,22 +97,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'=== Hello world ! ==='"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'{} {} ! {}'.format('===','Hello world','===')"
    ]
@@ -59,22 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'=== Hello world ! ==='"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'{0} {1} ! {0}'.format('===','Hello world')"
    ]
@@ -88,22 +133,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'=== Hello world ! ==='"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'{cadre} {texte} ! {cadre}'.format(texte='Hello world',cadre='===')"
    ]
@@ -117,68 +151,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Entiers : -002 10 F'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"Entiers : {:04d} {:o} {:X}\".format(-2,8,15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Flottants :  6.000000E-06 +4.500 6.000000E-06'"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"Flottants :  {1:-E} {0:+2.3f} {1:-E}\".format(4.5,0.000006)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Avec noms : texte 10 texte'"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"Avec noms : {ch:s} {val:d} {ch:s}\".format(ch='texte',val=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pour reprendre l'exemple utilisé dans la section précédente :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print('La somme de {0} et {1} est {2}, et le produit de {0} et {1} est {3}.'.format(3,2,3+2,3*2))"
    ]
   },
   {
@@ -190,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -201,13 +220,75 @@
        "'pi = 3.14 '"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\"pi = %1.2f \" % 3.14159"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lecture d'une valeur au clavier : fonction input()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La fonction `input()` permet demander une valeur au clavier. On peut fournir en argument une chaine de caractères à afficher juste avant."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quel est votre nom ? toto\n",
+      "toto\n"
+     ]
+    }
+   ],
+   "source": [
+    "nom = input(\"Quel est votre nom ? \") ; print(nom)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ATTENTION : la chaîne de caractère n'est pas interprétée, ni transformée en nombre si celle-c ressemble à un nombre. Il faut le faire explicitement (contrairement à Python 2)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quel âge avez-vous ?21\n",
+      "<class 'str'>\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = input(\"Quel âge avez-vous ?\") ; print(type(age)) ; age = int(age) ; print(type(age))"
    ]
   },
   {
@@ -222,8 +303,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On ouvre un fichier par open('filename', 'mode') et on le ferme par close(). Modes : 'r', 'w' et 'a'. Quelques méthodes :\n",
+    "* read() : lit tout le fichier dans une chaîne de caractères.\n",
+    "* readline() lit une seule ligne.\n",
+    "* readlines() lit tout le fichier dans une liste de chaînes.\n",
+    "* write('string') : écrit la chaine dans le fichier.\n",
+    "* writelines(sequence) : écrit la séquence dans le fichier, en mettant bout à bout les éléments. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -246,9 +339,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
+    "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -289,29 +383,20 @@
    "source": [
     "## Fichiers binaires\n",
     "\n",
-    "Les données lues et écrites sont en format texte, il est également possible de lire et écrire des données en format binaire via le module _pickle_"
+    "Les données lues et écrites sont en format texte par défaut.  \n",
+    "Il est également possible de lire et écrire des données en format binaire via le module `pickle`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "27 <class 'int'>\n",
-      "12.96 <class 'float'>\n",
-      "[5, 4.83, 'Mathieu'] <class 'list'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pickle\n",
     "a, b, c = 27, 12.96, [5, 4.83, \"Mathieu\"]\n",
@@ -345,22 +430,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'utf-8' codec can't decode byte 0x80 in position 0: invalid start byte\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fh = None\n",
     "try:\n",
@@ -389,19 +466,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Errno 2] No such file or directory: 'donnees_test'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    with open(\"donnees_test\") as fh:\n",
@@ -421,7 +490,15 @@
    "source": [
     "## A suivre...\n",
     "\n",
-    "[Travaux pratiques](../ellipsoides/synope_variables_fonctions_tp.ipynb)  "
+    "[Travaux pratiques](../ellipsoides/synope_variables_fonctions_tp.ipynb)  \n",
+    "[Fonctions](synope_fonctions_5_fonctions.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A propos des auteurs"
    ]
   },
   {
@@ -433,8 +510,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mise en forme"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -536,7 +620,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.3.5"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
