--- a/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_5_fonctions.ipynb
+++ b/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_5_fonctions.ipynb
@@ -22,7 +22,7 @@
     }
    },
    "source": [
-    "# Une fonction\n",
+    "## Une fonction\n",
     "\n",
     "Une fonction représente un sous-programme dédié à une tâche particulière :\n",
     " - permet de découper un programme complexe en sous-tâches\n",
@@ -51,7 +51,7 @@
     }
    },
    "source": [
-    "# Fonction simple sans paramètre"
+    "## Fonction simple sans paramètre"
    ]
   },
   {
@@ -109,7 +109,7 @@
     }
    },
    "source": [
-    "# Fonction simple avec paramètres"
+    "## Fonction simple avec paramètres"
    ]
   },
   {
@@ -137,7 +137,7 @@
     }
    },
    "source": [
-    "# Code de la fonction"
+    "## Code de la fonction"
    ]
   },
   {
@@ -182,7 +182,7 @@
     }
    },
    "source": [
-    "# Sortir d'une fonction\n",
+    "## Sortir d'une fonction\n",
     "\n",
     "On sort d'une fonction soit\n",
     "- parce que la fin du code est atteinte\n",
@@ -216,7 +216,7 @@
     }
    },
    "source": [
-    "# Passage d'arguments\n",
+    "## Passage d'arguments\n",
     "\n",
     "Une partie de programme qui appelle une fonction peut lui communiquer des arguments."
    ]
@@ -277,7 +277,7 @@
     }
    },
    "source": [
-    "# Passage de paramètres par adresse, par valeur\n",
+    "## Passage de paramètres par adresse, par valeur\n",
     "\n",
     "Python passe les variables par adresse.\n"
    ]
@@ -314,7 +314,7 @@
     }
    },
    "source": [
-    "# Passage de paramètres par adresse, par valeur\n",
+    "## Passage de paramètres par adresse, par valeur\n",
     "\n",
     "Python passe les variables par adresse.<br/>\n",
     "Cependant, les types scalaires de Python entier, flottant et chaine sont *immutables*."
@@ -351,7 +351,7 @@
     }
    },
    "source": [
-    "# Passage de paramètres par adresse, par valeur\n",
+    "## Passage de paramètres par adresse, par valeur\n",
     "\n",
     "Python passe les variables par adresse.<br/>\n",
     "Cependant, les types scalaires de Python entier, flottant et chaine sont *immutables*.<br/>\n",
@@ -390,7 +390,7 @@
     }
    },
    "source": [
-    "# Visibilité des variables\n",
+    "## Visibilité des variables\n",
     "\n",
     " - Chaque fonction crée sa propre pile;\n",
     " - Une fonction a accès à ses variables locales et aux variables globales;\n",
@@ -482,7 +482,7 @@
     }
    },
    "source": [
-    "# Valeurs par défaut\n",
+    "## Valeurs par défaut\n",
     " \n",
     "Il est possible de donner une valeur par défaut aux arguments des fonctions.\n"
    ]
@@ -514,7 +514,7 @@
     }
    },
    "source": [
-    "# Appel d'une fonction avec les arguments \"nommés\"\n",
+    "## Appel d'une fonction avec les arguments \"nommés\"\n",
     "\n",
     "Pour plus de lisibilité, il est également possible de nommer les arguments d'une fonction."
    ]
@@ -555,7 +555,7 @@
     }
    },
    "source": [
-    "# Nombre variable d'arguments\n",
+    "## Nombre variable d'arguments\n",
     "\n",
     "Il est souvent utile pour une fonction d'accepter un nombre quelconque d'arguments."
    ]
@@ -616,7 +616,7 @@
     }
    },
    "source": [
-    "# Nombre variable d'arguments nommés"
+    "## Nombre variable d'arguments nommés"
    ]
   },
   {
@@ -672,9 +672,17 @@
     }
    },
    "source": [
-    "# Et la suite\n",
+    "## A suivre...\n",
     "\n",
-    "On va maintenant passer aux [exercices pratiques](/notebooks/02_fonctions_TPs.ipynb)."
+    "[Travaux pratiques](../ellipsoides/synope_variables_fonctions_tp.ipynb)  \n",
+    "[Complements](synope_fonctions_6_complements.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A propos des auteurs"
    ]
   },
   {
@@ -683,6 +691,13 @@
    "source": [
     "*Travail initié en 2014 dans le cadre d'une série de formations Python organisées par le réseau Devlog.  \n",
     "Auteurs principaux : Loic Gouarin & David Chamont. Relecteurs : Nicolas Can, Sekou Diakite, Christophe Halgand, Christophe Gengembre.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mise en forme"
    ]
   },
   {
@@ -820,7 +835,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.3.5"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
