--- a/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_6_complements.ipynb
+++ b/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_6_complements.ipynb
@@ -49,7 +49,7 @@
     }
    },
    "source": [
-    "## Une fonction est une valeur"
+    "## Une fonction est une valeur comme une autre"
    ]
   },
   {
@@ -309,7 +309,7 @@
     }
    },
    "source": [
-    "# Le traitement de données par fonctions\n",
+    "## Le traitement de données par fonctions\n",
     "\n",
     "Il existe _3_ traitements standards sur les données de type \"**sequences**\" en python :\n",
     "- filter : qui, comme nous l'avons vu, permet de _filtrer_ nos données selon un critère exprimé par un prédicat :\n",
@@ -463,8 +463,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## A propos des auteurs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "*Travail initié en 2014 dans le cadre d'une série de formations Python organisées par le réseau Devlog.  \n",
     "Auteurs principaux : Loic Gouarin & David Chamont. Relecteurs : Nicolas Can, Sekou Diakite, Christophe Halgand, Christophe Gengembre.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mise en forme"
    ]
   },
   {
@@ -602,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.3.5"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
