add Marc Antoine remarks + add reveal style for slideshow

--- a/python/session-2016-03-idf/4_outils/ellipsoides/enonce/synope_session_2016_03_idf-TP4.ipynb
+++ b/python/session-2016-03-idf/4_outils/ellipsoides/enonce/synope_session_2016_03_idf-TP4.ipynb
@@ -22,15 +22,21 @@
     "\n",
     "#### Question 1\n",
     "\n",
-    "Utilisez pyLint sur le package *pySynope*. Essayer de faire les modifications pour atteindre une note supérieure à 5/10.\n",
+    "Utilisez PyLint sur le package *pySynope*. Essayer de faire les modifications pour atteindre une note supérieure à 5/10.\n",
+    "\n",
+    "Pour comprendre les messages de PyLint, vous pouvez vous reporter à la page suivante\n",
+    "\n",
+    "http://pylint-messages.wikidot.com/all-codes\n",
     "\n",
     "#### Question 2\n",
     "\n",
     "Ajoutez dans vos docstrings des tests unitaires et testez avec docstring.\n",
     "\n",
+    "Vous pourrez par exemple tester que votre fonction *linspace* a le bon comportement ou que le point $(1, 0)$ tourné de $\\frac{pi}{4}$ donne bien le point $(\\frac{\\sqrt{2}}{2}, \\frac{\\sqrt{2}}{2})$. \n",
+    "\n",
     "#### Question 3\n",
     "\n",
-    "Faites de même avec nosetests en ajoutant un répertoire *tests* à la racine du projet.\n",
+    "Faites de même avec nosetests en ajoutant un répertoire *tests* à la racine du projet. Vous pouvez réécrire les mêmes tests pour voir la différence d'implémentation.\n",
     "\n",
     "#### Question 4\n",
     "\n",
