--- a/python/session-2016-03-idf/5_calcul/ellipsoides/enonce/synope_session_2016_03_idf-TP5.ipynb
+++ b/python/session-2016-03-idf/5_calcul/ellipsoides/enonce/synope_session_2016_03_idf-TP5.ipynb
@@ -71,6 +71,8 @@
     "\n",
     "Vous devriez voir la forme d'un carré. Comme vous pouvez le constater, les points sont confinés aux angles. \n",
     "\n",
+    "#### Question 5\n",
+    "\n",
     "Pour avoir une plus jolie discrétisation de nos ellipsoïdes, nous allons projeter les points d'un carré $[0,1]\\times[0,1]$ sur celle-ci en utilisant les formules suivantes\n",
     "\n",
     "$$\n",
@@ -82,9 +84,7 @@
     "\n",
     "où $x_c$ et $y_c$ sont les coordonnées du carré unité.\n",
     "\n",
-    "#### Question 5\n",
-    "\n",
-    "A l'aide de *concatenate* et de *linspace*, construisez les coordonnées du carré unité (vous vous donnerez un entier $n$ qui coresspondra au nombre de points de discrétisation sur un côté).\n",
+    "A l'aide de *concatenate* et de *linspace*, construisez les coordonnées du carré unité (vous vous donnerez un entier $n$ qui correspondra au nombre de points de discrétisation sur un côté).\n",
     "\n",
     "Ecrire une méthode *surface_with_square* dans la classe *Superellipse* permettant de calculer les coordonnées de la superellipse en projetant le carré unité.\n",
     "\n",
@@ -106,7 +106,7 @@
     "\n",
     "#### Question 7\n",
     "\n",
-    "Reprendre la méthode *rotate* de quaternion pour qu'elle puisse fonctionner avec un tableau NumPy pour les positions donné en entrée.\n",
+    "Reprendre la méthode *rotate* de quaternion pour qu'elle puisse fonctionner avec un tableau NumPy pour les positions données en entrée.\n",
     "\n",
     "#### Question 8\n",
     "\n",
@@ -118,8 +118,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "def animate(i):\n",
     "    ..."
