--- a/python/session-2016-03-idf/5_calcul/theorie/matplotlib.ipynb
+++ b/python/session-2016-03-idf/5_calcul/theorie/matplotlib.ipynb
@@ -334,7 +334,9 @@
     }
    },
    "source": [
-    "## Ajouter un titre et des labels"
+    "## Ajouter un titre et des labels\n",
+    "\n",
+    "Il est possible de mettre du texte et des formules latex."
    ]
   },
   {
@@ -1821,10 +1823,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Pour aller plus loin\n",
+    "\n",
+    "N'hésitez pas à aller voir la galerie sur le site de matplotlib donnant un bon nombre d'exemples\n",
+    "\n",
+    "http://matplotlib.org/gallery.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "skip"
+    }
    },
    "outputs": [
     {
