--- a/python/session-2016-03-idf/5_calcul/theorie/numpy.ipynb
+++ b/python/session-2016-03-idf/5_calcul/theorie/numpy.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Ce notebook est distribué par Devlog sous licence Creative Commons - Attribution - Pas d’Utilisation Commerciale - Partage dans les Mêmes Conditions. La description complète de la license est disponible à l'adresse web http://creativecommons.org/licenses/by-nc-sa/4.0/.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "internals": {
      "slide_helper": "subslide_end",
@@ -16,7 +23,7 @@
     }
    },
    "source": [
-    "# Formation Python - *Numpy*"
+    "# Formation Python - *NumPy*"
    ]
   },
   {
@@ -1174,7 +1181,7 @@
    "source": [
     "### Les vues\n",
     "\n",
-    "NumPy crée des tableaux alloués en mémoire selon l'alignement C ou Fortran. \n",
+    "NumPy crée des tableaux alloués en mémoire selon l'alignement C ou Fortran (nous y reviendrons par la suite). \n",
     "\n",
     "On peut ensuite y accéder selon différentes vues.  "
    ]
@@ -2314,6 +2321,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vous pouvez également regarder la fonction *genfromtxt*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "internals": {
      "slide_type": "subslide"
@@ -2475,7 +2489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -2497,7 +2511,7 @@
        "div.text_cell_render{\n",
        "    font-family: 'Alegreya Sans',Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
        "    line-height: 135%;\n",
-       "    font-size: 120%;\n",
+       "    font-size: 140%;\n",
        "    width:100%;/*600px;*/\n",
        "    /*margin-left:auto;*/\n",
        "    /*margin-right:auto;*/\n",
@@ -2539,7 +2553,7 @@
        "    border-radius: 25px;\n",
        "    font-style: italic;\n",
        "    height:5%;\n",
-       "    width:15%;\n",
+       "    width:20%;\n",
        "    padding:5px;\n",
        "    text-align: center;\n",
        "}\n",
@@ -2568,16 +2582,28 @@
        "    border-radius: 10px;\n",
        "}\n",
        "\n",
-       "/*.reveal h1 {\n",
+       ".reveal h1 {\n",
+       "    font-size: 70px;\n",
        "    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);\n",
-       "}*/\n",
+       "}\n",
+       "\n",
+       ".reveal h2 {\n",
+       "    font-size: 50px;\n",
+       "    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);\n",
+       "}\n",
+       "\n",
+       ".reveal h3 {\n",
+       "    font-size: 50px;\n",
+       "    \n",
+       "}\n",
+       "\n",
        "</style>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
